[project]
name = "rag-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "pymongo>=4.16.0",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
]
